k8s_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-python-deployment
  labels:
    app: hello-python-deployment
    cup: coffee-1-2-3-3-3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-python-deployment
  template:
    metadata:
      labels:
        app: hello-python-deployment
    spec:
      containers:
      - name: hello-python-container
        image: danielrcode/applications:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: pvc_mount_test
          mountPath: /data
        ports:
        - containerPort: 5000
      volumes:
      - name: pvc_mount_test
        presistentVolumeClaim:
          claimName: local-path-pvc
