k8s_manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-python-service
  labels:
    app: hello-python-deployment
spec: 
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: hello-python-deployment
